--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 .main-container {
   display: flex;
   align-items: center;
